service-loadBalancer-networking/cilium/ingress/network-gtw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gtw
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTP 
      port: 80 
      name: web-gw
