service-loadBalancer-networking/cilium/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec: 
  ingressClassName: cilium
  rules:
  - host: "shopping.com"
    http:
      paths:
      - pathType: Prefix
        path: "/products"
        backend: 
          service: 
            name: ecom-products-svc
            port: 
              number: 3000
      - pathType: Prefix
        path: "/cart"
        backend: 
          service: 
            name: ecom-cart-svc
            port: 
              number: 3000
  - host: "blogger.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend: 
          service: 
            name: ecom-blog-svc
            port: 
              number: 3000
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: default-backend-svc
            port: 
              number: 80
